# iac

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  changelog.md
.github/workflows/: build-blog.yml  build-chatterbox-tts.yml  build-chem-images.yml  build-cs2-surf.yml  build-demo-mcp.yml  build-flockmap.yml  build-image.yaml  build-jarvis-edge.yml  build-kai.yml  build-manim-laue.yml  build-mc-earth.yml  build-periodic-table.yml  build-spotify-exporter.yml  build-surf-web.yml  build-vg.yml  build-whisper-stt.yml  docker-image.yml  push-flux-bundle.yaml  secret-scan.yml  test-e2e-chem.yml  validate.yaml
.kyverno/: disallow-latest-tag.yaml  require-namespace.yaml  require-resource-limits.yaml
ansible/: ansible.cfg  bootstrap.md  todo.md
ansible/inventory/: all.yaml  all.yml
ansible/playbooks/: apply-apiserver-oidc.yaml  fetch-kubeconfig.yaml  k8s-common.yml  kubernetes.yaml  kubernetes.yml  mikrotik-cs2-firewall.yaml  rke2.yaml
docs/: CHANGELOG.md  CILIUM_STATUS.md  CONTRIBUTING.md  GETTING_STARTED.md  HOMELAB-TODO.md  SECURITY.md  TROUBLESHOOTING.md
docs/ansible/: README.md  TODO.md
docs/jarvis/: cache-optimization.md  phase5-warm-brain.md  (+2 more)
kai/: .gitignore  Dockerfile.agent  Dockerfile.api  go.mod  go.sum
rke2/: README.md
rke2/game-server/cs2/surf-web/api/: Dockerfile  pyproject.toml
rke2/game-server/cs2/surf-web/api/app/: a2s.py  db.py  main.py  models.py  settings.py  steam.py  util.py
rke2/game-server/cs2/surf-web/api/app/routes/: maps.py  players.py  records.py
scripts/: check-no-inline-secrets.sh
(+1280 files in other folders)
