[project]
name = "surf-api"
version = "0.1.0"
description = "Read-only leaderboard API for the CS2 surf server (Source2Surf.Timer schema)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mysql-connector-python>=9.1",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # OpenTelemetry traces → Tempo. Auto-loaded by app/main.py when
    # OTEL_EXPORTER_OTLP_ENDPOINT is set in the env (see k8s/api-deployment.yaml).
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routes"]
